# starccato-vae

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  train.ipynb  train_cvae.ipynb
src/starcattovae/: loader.py  logger.py  plotting.py
src/starcattovae/nn/: autoencoder.py  cvae.py  cvae_observation.py  decoder.py  encoder.py  model.py  vae.py  vae_cnn.py
src/starcattovae/training/: additive_noise.py  data.py  trainer.py
